[gd_scene load_steps=7 format=3 uid="uid://bnnciace0erhd"]

[ext_resource type="Theme" uid="uid://5e0gdkevoqio" path="res://assets/themes/gui.tres" id="1_tey7r"]
[ext_resource type="Script" path="res://processes/parts/titlebar/TitleBar.gd" id="2_o0x7i"]
[ext_resource type="Texture2D" uid="uid://dpcki26ihn3xg" path="res://assets/titlebar/close.png" id="2_om2vx"]
[ext_resource type="Script" path="res://processes/parts/titlebar/TitleButton.gd" id="2_ravxl"]
[ext_resource type="Texture2D" uid="uid://dyw4v2rin3mau" path="res://assets/titlebar/minimize.png" id="2_rx7vi"]
[ext_resource type="Texture2D" uid="uid://bkogado07wyb3" path="res://assets/titlebar/maximize.png" id="3_lfhfg"]

[node name="TitleBar" type="Panel"]
self_modulate = Color(0.470588, 0.470588, 0.470588, 1)
custom_minimum_size = Vector2(0, 30)
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
theme = ExtResource("1_tey7r")
script = ExtResource("2_o0x7i")

[node name="TitleButtons" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/separation = 0

[node name="minimize" type="Panel" parent="TitleButtons"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
theme = ExtResource("1_tey7r")
script = ExtResource("2_ravxl")

[node name="TextureRect" type="TextureRect" parent="TitleButtons/minimize"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_rx7vi")
expand_mode = 1
stretch_mode = 5

[node name="maximize" type="Panel" parent="TitleButtons"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
theme = ExtResource("1_tey7r")
script = ExtResource("2_ravxl")

[node name="TextureRect" type="TextureRect" parent="TitleButtons/maximize"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_lfhfg")
expand_mode = 1
stretch_mode = 5

[node name="close" type="Panel" parent="TitleButtons"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
theme = ExtResource("1_tey7r")
script = ExtResource("2_ravxl")

[node name="TextureRect" type="TextureRect" parent="TitleButtons/close"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_om2vx")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -7.5
offset_top = -11.5
offset_right = 7.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1

[node name="IconContainer" type="Control" parent="."]
custom_minimum_size = Vector2(30, 0)
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2

[node name="Icon" type="TextureRect" parent="IconContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5
